added html page for create order

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Spontaneous Sentiments</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <title>Slow Flowers</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <script
+          src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
   </head>
   <body>
-    <p>Hello World it's Yaka Moose!</p>
+
+    <div class="background-image">
+
+        <h1>Slow Flowers</h1>
+        <div class="description">
+          <p>Flower delivery service that takes the spontaneity of a loving thought off your hands.</p>
+          <p>Slow Flowers is a spontaneous flower delivery service. What that means is that you choose your flower boquet to deliver, and then choose the delivery window you want the flowers to be delivered (2 weeks - 1 year).  Then at a random time in your window your delivery will take place, thus making you look like the spontaneous and thoughtful person you are.</p>
+          <form class="start-btn">
+            <button class="btn">START</button>
+          </form>
+        </div>
+
+
+    </div>
+
+    <script src="index.js"></script>
   </body>
+
 </html>
