--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="index.css" rel="stylesheet" type="text/css">
-    <title>Slow Flowers</title>
+    <title>Modern Romance</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
@@ -14,14 +14,27 @@
   </head>
   <body>
 
+    <nav>
+      <ul>
+        <li><a class="title" href="index.html">Moderen Romance</a></li>
+        <li><a class="login" href="#">Log In</a></li>
+      </ul>
+    </nav>
+
     <div class="background-image">
 
-        <h1>Slow Flowers</h1>
+        <!-- <h1>Modern Romance</h1> -->
         <div class="description">
           <p>Flower delivery service that takes the spontaneity of a loving thought off your hands.</p>
           <p>Slow Flowers is a spontaneous flower delivery service. What that means is that you choose your flower boquet to deliver, and then choose the delivery window you want the flowers to be delivered (2 weeks - 1 year).  Then at a random time in your window your delivery will take place, thus making you look like the spontaneous and thoughtful person you are.</p>
           <form class="start-btn">
-            <button class="btn">START</button>
+            <button class="btn">START ORDER</button>
+          </form>
+        </div>
+
+        <div class="sign-up" style="display: none;" role="form">
+          <form>
+            <p>register or sign in</p>
           </form>
         </div>
 
