--- a/public/index.html
+++ b/public/index.html
@@ -2,46 +2,86 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="index.css" rel="stylesheet" type="text/css">
     <title>Modern Romance</title>
 
+    <link href="index.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
           crossorigin="anonymous"></script>
+
   </head>
   <body>
 
-    <nav>
-      <ul>
-        <li><a class="title" href="index.html">Moderen Romance</a></li>
-        <li><a class="login" href="#">Log In</a></li>
-      </ul>
-    </nav>
+
 
     <div class="background-image">
+      <nav>
+        <ul>
+          <li><a class="title" href="index.html">Moderen Romance</a></li>
+          <li><a class="login nav-right" href="#">Log In</a></li>
+          <li><a class="products nav-right" href="products.html">Products</a></li>
 
-        <!-- <h1>Modern Romance</h1> -->
-        <div class="description">
-          <p>Flower delivery service that takes the spontaneity of a loving thought off your hands.</p>
-          <p>Slow Flowers is a spontaneous flower delivery service. What that means is that you choose your flower boquet to deliver, and then choose the delivery window you want the flowers to be delivered (2 weeks - 1 year).  Then at a random time in your window your delivery will take place, thus making you look like the spontaneous and thoughtful person you are.</p>
-          <form class="start-btn">
-            <button class="btn">START ORDER</button>
-          </form>
+        </ul>
+      </nav>
+
+      <div class="box">
+
+        <div class="start-box" style="display: visible;">
+          <h1>Here's the deal...</h1>
+          <p>Modern Romance is a spontaneous flower delivery service. What that means is that you choose your flower boquet to deliver, and then choose the delivery window you want the flowers to be delivered in (2 weeks - 1 year).  Then at a random time in your window your delivery will take place, thus making you the spontaneous and thoughtful person you are.</p>
+
+          <button type="submit" class="start-btn">Get Started</button>
         </div>
 
-        <div class="sign-up" style="display: none;" role="form">
-          <form>
-            <p>register or sign in</p>
-          </form>
+
+        <div class="signup-login" style="display: none;">
+          <div class="signup">
+            <h1>Sign Up</h1>
+            <p>Create an account and begin creating your order.</p>
+            <button class="signup-btn">Sign Up</button>
+          </div>
+          <div class="login">
+            <h1>Log In</h1>
+            <p>Create new orders or edit existing orders.</p>
+            <button class="login-btn">Log In</button>
+          </div>
         </div>
 
 
+        <div class="signup-box" style="display: none;">
+            <h1>Create Your Account</h1>
+            <form class="signup-form" method="post">
+              <input type="text" id="first-name" name="first name" placeholder="First Name" required="true">
+							<input type="text" id="last-name" name="last name" placeholder="Last Name" required="true">
+              <input type="email" id="email" name="email" placeholder="Email" required="true">
+              <input type="text" id="username" name="user name" placeholder="Username" required="true">
+							<input type="password" id="password" name="password" placeholder="Password" required="true">
+							<button type="submit" class="create-btn">Create Account</button>
+
+            </form>
+        </div>
+
+        <div class="login-box" style="display: none;">
+          <div class="login-border">
+          <h1>Log In</h1>
+          <form action="#" class="login-form" method="get">
+							<input type="text" id="existingName" name="user name" placeholder="Username" required="true">
+							<input type="password" id="existingPassword" name="password" placeholder="Password" required="true">
+							<button type="submit" class="login-window-btn">Log In</button>
+						</form>
+          </div>
+
+
+        </div>
+
+
+      </div>
     </div>
+
 
     <script src="index.js"></script>
   </body>
-
 </html>
