fully functioning need to add some test

--- a/public/create-order.html
+++ b/public/create-order.html
@@ -58,7 +58,7 @@
 
         <div class="address" style="display: none;">
           <form class="address-form">
-							<input type="text" id="firstName" placeholder="First Name" required="true">
+							<input type="text" id="firstName" placeholder="First Name" required="required">
               <input type="text" id="lastName" placeholder="Last Name" required="true">
               <input type="text" id="street" placeholder="Street Address" required="true">
               <input type="text" id="city" placeholder="City" required="true">
