--- a/public/home.html
+++ b/public/home.html
@@ -35,10 +35,10 @@
             <p>Begin creating your thoughtful and loving order.</p>
             <button class="create-btn">Start Order</button>
           </div>
-          <div class="edit-order">
-            <h1>Edit Order</h1>
-            <p>Edit or check on an existing order.</p>
-            <button class="edit-btn">Edit Order</button>
+          <div class="view-orders">
+            <h1>View Orders</h1>
+            <p>Check on an existing orders and their delivery dates.</p>
+            <button class="edit-btn">View Orders</button>
           </div>
         </div>
 
