--- a/public/products.html
+++ b/public/products.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a class="title" href="home.html">Moderen Romance</a></li>
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="home" type="input" href="#" onclick="watchHomeSubmit();">Home</a></li>
+          <li><a class="home" id='home' href="#" onclick="watchHomeSubmit();">Home</a></li>
         </ul>
       </nav>
 
