--- a/public/view-orders.html
+++ b/public/view-orders.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Modern Romance</title>
 
-    <link href="edit-orders.css" rel="stylesheet" type="text/css">
+    <link href="view-orders.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <script
@@ -17,30 +17,42 @@
 
 
 
-    <div class="background-image">
+    <div>
       <nav>
         <ul>
           <li><a class="title" href="home.html">Moderen Romance</a></li>
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="home" type="input" href="#" onclick="watchHomeSubmit();">Home</a></li>
+          <li><a class="home" type="input" href="home.html">Home</a></li>
         </ul>
       </nav>
 
-      <div class="box">
-
-
-        <div class="products" style="display: visible;">
-          <h1>hello</h1>
-        </div>
-
-
-
-
+      <div class="title-box">
+        <h1 class="title-view">Here are your submitted orders.</h1>
 
       </div>
+
+      <div class="boxes">
+
+        <!-- <div class="orders" style="display: visible;">
+          <div class"indv-orders" id="order">
+            <div class="details div-left" id="details">
+
+            </div>
+            <div class="product div-right" id="product">
+
+            </div>
+          </div>
+        </div> -->
+
+      </div>
+
+
+
+
+
     </div>
 
 
-    <script src="edit-orders.js"></script>
+    <script src="view-orders.js"></script>
   </body>
 </html>
