fully functioning needs more tests for apis

--- a/public/view-orders.html
+++ b/public/view-orders.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a class="title" href="home.html">Moderen Romance</a></li>
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="home" type="input" href="home.html">Home</a></li>
+          <li><a class="home" href="home.html">Home</a></li>
         </ul>
       </nav>
 
@@ -33,16 +33,7 @@
 
       <div class="boxes">
 
-        <!-- <div class="orders" style="display: visible;">
-          <div class"indv-orders" id="order">
-            <div class="details div-left" id="details">
 
-            </div>
-            <div class="product div-right" id="product">
-
-            </div>
-          </div>
-        </div> -->
 
       </div>
 
