styled index, home, products

--- a/public/home.html
+++ b/public/home.html
@@ -7,6 +7,8 @@
     <link href="home.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link rel="icon" type="image/png"  href="./images/title-icon.png"/>
+
     <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -21,8 +23,11 @@
       <nav>
         <ul>
           <li><a class="title" href="#">Moderen Romance</a></li>
+          <li><a class="logOut nav-right" href="index.html">Log Out</a></li>
+
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="products" href="products.html">Products</a></li>
+          <li><a class="view nav-right"   href="view-orders.html">View Orders</a></li>
+          <li><a class="products nav-right" href="products.html">Products</a></li>
         </ul>
       </nav>
 
