--- a/public/view-orders.html
+++ b/public/view-orders.html
@@ -7,6 +7,8 @@
     <link href="view-orders.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link rel="icon" type="image/png"  href="./images/title-icon.png"/>
+
     <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -21,8 +23,10 @@
       <nav>
         <ul>
           <li><a class="title" href="home.html">Moderen Romance</a></li>
+          <li><a class="logOut nav-right" href="index.html">Log Out</a></li>
+
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="home" href="home.html">Home</a></li>
+          <li><a class="home nav-right" href="home.html">Home</a></li>
         </ul>
       </nav>
 
