--- a/public/create-order.html
+++ b/public/create-order.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,6 +7,8 @@
     <link href="create-order.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link rel="icon" type="image/png"  href="./images/title-icon.png"/>
+
     <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -21,8 +23,9 @@
       <nav>
         <ul>
           <li><a class="title" href="home.html">Moderen Romance</a></li>
+          <li><a class="logOut nav-right" href="index.html">Log Out</a></li>
           <!-- <li><a class="edit-user" href="edit-user.html">Edit Profile</a></li> -->
-          <li><a class="home" href="home.html">Home</a></li>
+          <li><a class="home nav-right" href="home.html">Home</a></li>
         </ul>
       </nav>
 
@@ -39,17 +42,17 @@
 
 
         <div class="products" style="display: visible;">
-          <div class="dozen">
+          <div class="dozen pro">
             <img src="./images/dozen.jpg" alt="image dozen roses">
             <p>Dozen Roses<br>$49.99</p>
             <button class="dozen-btn">Choose</button>
           </div>
-          <div class="two-dozen">
+          <div class="two-dozen pro">
             <img src="./images/two-dozen.jpg" alt="image two dozen roses">
             <p>Two Dozen Roses<br>$69.99</p>
             <button class="two-dozen-btn">Choose</button>
           </div>
-          <div class="mixed-bouquet">
+          <div class="mixed-bouquet pro">
             <img src="./images/mixed-bouquet.jpg" alt="image mixed bouquet">
             <p>Mixed Roses<br>$39.99</p>
             <button class="mixed-btn">Choose</button>
@@ -58,12 +61,12 @@
 
         <div class="address" style="display: none;">
           <form class="address-form">
-							<input type="text" id="firstName" placeholder="First Name" required="required">
-              <input type="text" id="lastName" placeholder="Last Name" required="true">
-              <input type="text" id="street" placeholder="Street Address" required="true">
-              <input type="text" id="city" placeholder="City" required="true">
-              <input type="text" id="state" placeholder="State" required="true">
-              <input type="text" id="zipCode" placeholder="Zip Code" required="true">
+							<input type="text" id="firstName" placeholder="First Name" required>
+              <input type="text" id="lastName" placeholder="Last Name" required>
+              <input type="text" id="street" placeholder="Street Address" required>
+              <input type="text" id="city" placeholder="City" required>
+              <input type="text" id="state" placeholder="State" required>
+              <input type="text" id="zipCode" placeholder="Zip Code" required>
 
 							<button type="submit" class="address-submit-btn">Next</button>
 					</form>
@@ -74,11 +77,12 @@
             <h1>Spontaneous</h1>
             <p>Choose a window for your delivery to take place and your order will be shipped randomy within that window.</p>
             <form class="spont-form">
-              <!-- <input type="radio" id="0.5" name="choice" required="true">2 weeks</input> -->
-              <input type="radio" id="1" name="choice" required="true">1 month</input>
-              <input type="radio" id="3" name="choice" required="true">3 months</input><br>
-              <input type="radio" id="6" name="choice" required="true">6 months</input>
-              <input type="radio" id="12" name="choice" required="true">1 year</input><br>
+              <!-- <input type="radio" id="0.5" name="choice" required>2 weeks</input> -->
+
+              <input type="radio" id="1" name="choice" required>1 month</input>
+              <input type="radio" id="3" name="choice" required>3 months</input><br>
+              <input type="radio" id="6" name="choice" required>6 months</input>
+              <input type="radio" id="12" name="choice" required>1 year</input><br>
               <button type="submit" class="spontaneous-date-btn">Next</button>
             </form>
 
@@ -88,7 +92,7 @@
             <h1>Choose A Date</h1>
             <p>Choose a specific date to ship like a birthday, valentine's day, mother's day etc, to keep your bases covered.</p>
             <form class="choose-date-form">
-              <input type="date" id="choose-date-id" required="true"><br>
+              <input type="date" id="choose-date-id" required><br>
               <button type="submit" class="choose-date-btn">Next</button>
             </form>
           </div>
@@ -127,7 +131,7 @@
         <div class="confirmation" style="display: none;">
           <h1>Your order has been submitted</h1>
           <p>An email with your order details has been emailed.</p>
-          <p>You can check on your order and Spontaneous&copy; delivery date from the Edit Order page.</p>
+          <p>You can check on your order and Spontaneous&copy; delivery date from the View Order page.</p>
           <h1>Thank you for your order!</h1>
         </div>
 
