--- a/public/products.html
+++ b/public/products.html
@@ -7,6 +7,8 @@
     <link href="products.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link rel="icon" type="image/png"  href="./images/title-icon.png"/>
+
     <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -29,18 +31,18 @@
       <div class="box">
 
 
-        <div class="products" style="display: visible;">
-          <div class="dozen">
+        <div class="products">
+          <div class="dozen pro">
             <img src="./images/dozen.jpg" alt="image dozen roses">
             <p>A Dozen Roses</p>
             <button class="create-btn">Create Order</button>
           </div>
-          <div class="two-dozen">
+          <div class="two-dozen pro">
             <img src="./images/two-dozen.jpg" alt="image two dozen roses">
             <p>Two Dozen Roses</p>
             <button class="create-btn">Create Order</button>
           </div>
-          <div class="mixed-bouquet">
+          <div class="mixed-bouquet pro">
             <img src="./images/mixed-bouquet.jpg" alt="image mixed bouquet">
             <p>Mixed Roses</p>
             <button class="create-btn">Create Order</button>
