fixing view orders styling issue

--- a/public/create-order.html
+++ b/public/create-order.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html5>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Modern Romance</title>
@@ -36,7 +36,7 @@
         <h1 class="title-confirmation" style="display: none;">Well Done!!!</h1>
       </div>
 
-      <div class="box">
+      <div class="box" role="main">
 
 
         <div class="products" style="display: visible;">
