--- a/public/view-orders.html
+++ b/public/view-orders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Modern Romance</title>
@@ -31,7 +31,7 @@
         <h1 class="title-view">Here are your submitted orders.</h1>
       </div>
 
-      <div class="boxes">
+      <div class="boxes" role="main">
       </div>
     </div>
 
