--- a/public/home.html
+++ b/public/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Modern Romance</title>
@@ -16,7 +16,7 @@
 
   </head>
   <body>
-    
+
     <div class="background-image">
       <nav>
         <ul>
@@ -29,7 +29,7 @@
         </ul>
       </nav>
 
-      <div class="box">
+      <div class="box" role="main">
 
         <div class="home" style="display: visible;">
           <div class="create-order">
