--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Modern Romance</title>
@@ -25,7 +25,7 @@
         </ul>
       </nav>
 
-      <div class="box">
+      <div class="box"  role="main">
 
         <div class="start-box" style="display: visible;">
           <h1>Here's the deal...</h1>
