--- a/public/products.html
+++ b/public/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Modern Romance</title>
@@ -26,7 +26,7 @@
         </ul>
       </nav>
 
-      <div class="box">
+      <div class="box" role="main">
 
         <div class="products">
           <div class="dozen pro">
