added demo acct

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
         <div class="login-box" style="display: none;">
           <div class="login-border">
           <h1>Log In</h1>
+          <p>Demo Account: demo/pass</p>
           <form action="#" class="login-form" method="get">
 							<input type="text" id="existingName" name="user name" placeholder="Username" required>
 							<input type="password" id="existingPassword" name="password" placeholder="Password" required>
