DEMO version clear.

--- a/public/create-order.html
+++ b/public/create-order.html
@@ -106,6 +106,7 @@
 
         <div class="payment" style="display: none;">
           <h1>Enter credit card info below</h1>
+          <p>CC info will not be used.  This is a DEMO.</p>
 
           <form class="cc-form">
             <input type="text" class="cc-name" id="cc-name" placeholder="Name on card"><br>
